# salesanalysisagent

./: README.md  data_format_check_task.json  fix_schema.py  fix_schema_working.py  generated_code.py  mapping.json  pyproject.toml  schema_validator_task.json  trained_agents_data.pkl  training_data.pkl
knowledge/: code.py  mysql_credential.txt  requirements.txt
src/salesanalysisagent/: crew.py  load_sales_data.py  main.py  mapping.json  readme.md  run_recovery.py  test.py
src/salesanalysisagent/agents/: schema_validator_agent.py
src/salesanalysisagent/config/: agents.yaml  tasks.yaml
src/salesanalysisagent/config/config/: agents.yaml  tasks.yaml
src/salesanalysisagent/data/: mapping.json
src/salesanalysisagent/data/combined_testcase/: pos_raw_sales.csv  read_pos_raw_sales.py  sales.txt  sales_table
src/salesanalysisagent/data/data_change/: sales.txt  sales_table
src/salesanalysisagent/data/data_change_1/: sales.txt  sales_table
src/salesanalysisagent/data/extra_column/: mapping.json  sales.txt  sales_table
src/salesanalysisagent/logs/: error_log.txt
src/salesanalysisagent/pipeline/: csv_data_ingestion.py
src/salesanalysisagent/router/: task_router.py
src/salesanalysisagent/tools/: clean_validate_tool.py  code_gen_tool.py  custom_python_tool.py  data_format_validator.py  data_loader_tool.py  inspect_tool.py  schema_mapping_tool.py  schema_validator.py
src/salesanalysisagent/utils/: clean_run.sh  prep_data.py  prep_modified_raw_data.py  prep_raw_data.py  production_dim.csv  sales_fact.csv  store_dim.csv
(+11 files in other folders)
