[project]
name = "salesanalysisagent"
version = "0.1.0"
description = "salesAnalysisAgent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "chromadb>=0.5.23",
    "crewai[tools]>=0.114.0,<1.0.0",
    "mysql-connector-python>=9.3.0",
    "voyageai>=0.3.2",
]

[project.scripts]
salesanalysisagent = "salesanalysisagent.main:run"
run_crew = "salesanalysisagent.main:run"
train = "salesanalysisagent.main:train"
replay = "salesanalysisagent.main:replay"
test = "salesanalysisagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
